--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,32 @@
+// 플러그인 섹션, 프로젝트 필요 플러그인 명시
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '2.7.16'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'java' // Java 플러그인 적용, Java 프로젝트 관련 기능 사용 가능
+	id 'org.springframework.boot' version '2.7.16' // Spring Boot 플러그인 적용, Spring Boot 관련 기능 사용 가능
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE' // Spring Dependency Management 플러그인 적용, 중앙 저장소에서 의존성 버전 자동 관리
 }
 
+// 프로젝트의 그룹 ID와 버전 설정
 group = 'hello'
 version = '0.0.1-SNAPSHOT'
 
+// Java 버전 설정
 java {
-	sourceCompatibility = '11'
+	sourceCompatibility = '11' // 소스 코드 호환 Java 버전 11 설정
 }
 
+// 의존성 해결을 위한 저장소 지정
 repositories {
-	mavenCentral()
+	mavenCentral() // Maven Central Repository 사용 설정
 }
 
+// 프로젝트 의존 라이브러리 명시
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf' // Thymeleaf 템플릿 엔진과 함께 Spring Boot 사용을 위한 Starter 패키지 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web' // 웹 애플리케이션 개발 Starter 패키지 의존성 추가 (내장 Tomcat, Spring MVC 등 포함)
+	testImplementation 'org.springframework.boot:spring-boot-starter-test' // 스프링 부트 애플리케이션 테스트에 필요한 Starter 패키지 의존성 추가 (예: JUnit)
 }
 
+// test 작업에 대한 설정
 tasks.named('test') {
-	useJUnitPlatform()
+	useJUnitPlatform() // JUnit 5를 사용하여 테스트 실행 설정
 }
